Subir estructura básica html del proyecto
Esto es solo el esqueleto html básico

--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="section-hero">
+        <header class="header">
+          <div class="logo">Header logo</div>
+          <div class="links">
+            <a href="#">link 1</a>
+            <a href="#">link 2</a>
+            <a href="#">link 3</a>
+          </div>
+        </header>
+        <div class="hero-2da-parte">
+          <div class="main-text"></div>
+          <div class="image"></div>
+        </div>
+      </section>
+
+      <section class="section-info-random">
+          <h2>Random information</h2>
+         <div class="div-info-random">
+          <div class="cuadrado"></div>
+          <div class="cuadrado"></div>
+          <div class="cuadrado"></div>
+          <div class="cuadrado"></div>
+         </div>
+
+      </section>
+
+      <section class="section-quote">
+        Lorem ipsum dolor sit amet consectetur 
+        adipisicing elit. Eligendi sed repudiandae 
+        iure ea! Praesentium, officiis reiciendis 
+        error cupiditate delectus minima quas nulla 
+        sunt, accusamus veritatis quisquam unde conse
+        quuntur recusandae assumenda!
+      </section>
+
+      <section class="section-action">
+        <div class="div-action-buttom">
+          
+        </div>
+      </section>
+    </main>
+
+    <footer>Footer</footer>
+  </body>
 </html>
