--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           </div>
         </header>
         <div class="hero-2da-parte">
-          <div class="main-text"></div>
+          <div class="main-text">
+            <p class="text-big">Landing Page</p>
+            <p class="text-small">Landing page de prueba.
+               The Odin Project</p>
+          </div>
           <div class="image"></div>
         </div>
       </section>
@@ -27,10 +31,18 @@
       <section class="section-info-random">
           <h2>Random information</h2>
          <div class="div-info-random">
-          <div class="cuadrado"></div>
-          <div class="cuadrado"></div>
-          <div class="cuadrado"></div>
-          <div class="cuadrado"></div>
+          <div class="cuadrado">
+            <img src="Assets/carpincho.jpeg" alt="">
+          </div>
+          <div class="cuadrado">
+            <img src="Assets/gato.jpeg" alt="">
+          </div>
+          <div class="cuadrado">
+            <img src="Assets/carpincho2.jpeg" alt="">
+          </div>
+          <div class="cuadrado">
+            <img src="Assets/gato2.jpeg" alt="">
+          </div>
          </div>
 
       </section>
@@ -46,7 +58,8 @@
 
       <section class="section-action">
         <div class="div-action-buttom">
-          
+          <div class="action-text"></div>
+          <button class="button-action"></button>
         </div>
       </section>
     </main>
