Agregar estructura básica al css

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <p class="text-big">Landing Page</p>
             <p class="text-small">Landing page de prueba.
                The Odin Project</p>
+               <button class="button-inicio"></button>
           </div>
-          <div class="image"></div>
+          <div class="img-inicio"></div>
         </div>
       </section>
 
@@ -32,16 +33,16 @@
           <h2>Random information</h2>
          <div class="div-info-random">
           <div class="cuadrado">
-            <img src="Assets/carpincho.jpeg" alt="">
+            <img class="img-info" src="Assets/carpincho.jpeg" alt="">
           </div>
           <div class="cuadrado">
-            <img src="Assets/gato.jpeg" alt="">
+            <img class="img-info" src="Assets/gato.jpeg" alt="">
           </div>
           <div class="cuadrado">
-            <img src="Assets/carpincho2.jpeg" alt="">
+            <img class="img-info" src="Assets/carpincho2.jpeg" alt="">
           </div>
           <div class="cuadrado">
-            <img src="Assets/gato2.jpeg" alt="">
+            <img class="img-info" src="Assets/gato2.jpeg" alt="">
           </div>
          </div>
 
