--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             
             <div class="hero-2da-parte">
             <div class="div-main-text">
-              <p class="text-big">This Landing Page is awesome</p>
-              <p class="text-small">Landing page de prueba. Lorem, ipsum dolor
-                 sit amet consectetur adipisicing elit. Omnis aut veritatis 
+              <p class="text-big">This Landing Page is very waos</p>
+              <p class="text-small">Lorem, ipsum dolor
+                 sit amet consectetur adipisicing elit. Omnis aut veritatis Lorem
+                ipsum dolor sit amet consectetur, adipisicing elit. Illo explicabo
+               ipsa mollitia, quas error nemo
+               
               </p>
               <div class="div button">
                 <span class="button-inicio">Sign Up</span>
