Terminar la section info random

--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
       </section>
 
       <section class="section-info-random">
-          <h2>Random information</h2>
+          <h2 class="text-random-info">Random information</h2>
          <div class="div-info-random">
           <div class="cuadrado">
             <img class="img-info" src="Assets/carpincho.jpeg" alt="">
-            <p class="text-info-random">Carpincho refachero</p>
+            <p class="text-img-random">Carpincho refachero</p>
           </div>
           <div class="cuadrado">
             <img class="img-info" src="Assets/gato.jpeg" alt="">
-            <p class="text-info-random">Gato caretabla</p>
+            <p class="text-img-random">Gato caretabla</p>
           </div>
           <div class="cuadrado">
             <img class="img-info" src="Assets/carpincho2.jpeg" alt="">
-            <p class="text-info-random">Carpincho refachero 2</p>
+            <p class="text-img-random">Carpincho refachero 2</p>
           </div>
           <div class="cuadrado">
             <img class="img-info" src="Assets/gato2.jpeg" alt="">
-            <p class="text-info-random">Gato caretabla 2</p>
+            <p class="text-img-random">Gato caretabla 2</p>
           </div>
          </div>
 
