Terminar la quote section

--- a/index.html
+++ b/index.html
@@ -70,18 +70,27 @@
       </section>
 
       <section class="section-quote">
-        Lorem ipsum dolor sit amet consectetur 
+       
+        <blockquote  class="quote">
+          <p class="quote-text">
+          "Lorem ipsum dolor sit amet consectetur 
         adipisicing elit. Eligendi sed repudiandae 
         iure ea! Praesentium, officiis reiciendis 
         error cupiditate delectus minima quas nulla 
         sunt, accusamus veritatis quisquam unde conse
-        quuntur recusandae assumenda!
+        quuntur recusandae assumenda".
+        </p>
+
+        <span class="cite">-AlienZavio</span>
+        </blockquote>
+        
       </section>
 
       <section class="section-action">
-        <div class="div-action-buttom">
-          <div class="action-text"></div>
-          <button class="button-action"></button>
+        <div class="div-action">
+          <p class="text-action1"></p>
+          <p class="text-action2"></p>
+          <span class="button-action"></span>
         </div>
       </section>
     </main>
